--- a/infrastructure/services/node/service.yml
+++ b/infrastructure/services/node/service.yml
@@ -1,5 +1,5 @@
 Description: >
-    This is an example of a long running ECS service that serves a JSON API of nginx.
+    This is an example of a long running ECS service that serves a JSON API from node endpoint
 
 Parameters: 
 
@@ -36,7 +36,7 @@ Resources:
             TaskDefinition: !Ref TaskDefinition
             LoadBalancers: 
                 - ContainerName: "node-service"
-                  ContainerPort: 8001
+                  ContainerPort: 3000
                   TargetGroupArn: !Ref TargetGroup
 
     TaskDefinition:
@@ -49,7 +49,7 @@ Resources:
                   Image: 132906654537.dkr.ecr.us-east-1.amazonaws.com/node:1.0.0
                   Memory: 128
                   PortMappings:
-                    - ContainerPort: 8001
+                    - ContainerPort: 3000
                   LogConfiguration:
                     LogDriver: awslogs
                     Options:
@@ -71,7 +71,7 @@ Resources:
             Matcher: 
                 HttpCode: 200-299
             HealthCheckIntervalSeconds: 10
-            HealthCheckPath: /
+            HealthCheckPath: /node
             HealthCheckProtocol: HTTP
             HealthCheckTimeoutSeconds: 5
             HealthyThresholdCount: 2
