--- a/infrastructure/master-test.yml
+++ b/infrastructure/master-test.yml
@@ -16,7 +16,7 @@ Resources:
     VPC:
         Type: AWS::CloudFormation::Stack
         Properties:
-            TemplateURL: https://s3.amazonaws.com/sciam-dev-cf-templates/infrastructure/vpc.yaml
+            TemplateURL: https://s3.amazonaws.com/sciam-dev-infrastructure-templates/infrastructure/vpc.yaml
             Parameters:
                 EnvironmentName:    !Ref AWS::StackName
                 VpcCIDR:            10.190.0.0/16
@@ -28,7 +28,7 @@ Resources:
     SecurityGroups:
         Type: AWS::CloudFormation::Stack
         Properties:
-            TemplateURL: https://s3.amazonaws.com/sciam-dev-cf-templates/infrastructure/security-groups.yaml
+            TemplateURL: https://s3.amazonaws.com/sciam-dev-infrastructure-templates/infrastructure/security-groups.yaml
             Parameters: 
                 EnvironmentName: !Ref AWS::StackName
                 VPC: !GetAtt VPC.Outputs.VPC
@@ -36,7 +36,7 @@ Resources:
     ALB:
         Type: AWS::CloudFormation::Stack
         Properties:
-            TemplateURL: https://s3.amazonaws.com/sciam-dev-cf-templates/infrastructure/load-balancers.yaml
+            TemplateURL: https://s3.amazonaws.com/sciam-dev-infrastructure-templates/infrastructure/load-balancers.yaml
             Parameters:
                 EnvironmentName: !Ref AWS::StackName
                 VPC: !GetAtt VPC.Outputs.VPC
@@ -46,7 +46,7 @@ Resources:
     ECS:
         Type: AWS::CloudFormation::Stack
         Properties:
-            TemplateURL: https://s3.amazonaws.com/sciam-dev-cf-templates/infrastructure/ecs-cluster.yaml
+            TemplateURL: https://s3.amazonaws.com/sciam-dev-infrastructure-templates/infrastructure/ecs-cluster.yaml
             Parameters:
                 EnvironmentName: !Ref AWS::StackName
                 InstanceType: t2.micro
@@ -55,36 +55,20 @@ Resources:
                 SecurityGroup: !GetAtt SecurityGroups.Outputs.ECSHostSecurityGroup
                 Subnets: !GetAtt VPC.Outputs.PrivateSubnets
 
-    ProductService:
+    ApiService:
         Type: AWS::CloudFormation::Stack
         Properties:
-            TemplateURL: https://s3.amazonaws.com/sciam-dev-cf-templates/services/product-service/service.yaml
+            TemplateURL: https://s3.amazonaws.com/sciam-dev-infrastructure-templates/services/api/service.yml
             Parameters:
                 VPC: !GetAtt VPC.Outputs.VPC
                 Cluster: !GetAtt ECS.Outputs.Cluster
                 DesiredCount: 3
                 Listener: !GetAtt ALB.Outputs.Listener 
-                Path: /products
-
-    WebsiteService:
-        Type: AWS::CloudFormation::Stack
-        Properties:
-            TemplateURL: https://s3.amazonaws.com/sciam-dev-cf-templates/services/website-service/service.yaml
-            Parameters:
-                VPC: !GetAtt VPC.Outputs.VPC
-                Cluster: !GetAtt ECS.Outputs.Cluster
-                DesiredCount: 3
-                ProductServiceUrl: !Join [ "/", [ !GetAtt ALB.Outputs.LoadBalancerUrl, "products" ]]
-                Listener: !GetAtt ALB.Outputs.Listener 
-                Path: /
+                Path: /api
 
 
 Outputs:
 
-    ProductServiceUrl: 
-        Description: The URL endpoint for the product service
-        Value: !Join [ "/", [ !GetAtt ALB.Outputs.LoadBalancerUrl, "products" ]]
-
-    WebsiteServiceUrl: 
-        Description: The URL endpoint for the website service
-        Value: !Join ["", [ !GetAtt ALB.Outputs.LoadBalancerUrl, "/" ]]
+    ApiServiceUrl: 
+        Description: The URL endpoint for the api service
+        Value: !Join [ "/", [ !GetAtt ALB.Outputs.LoadBalancerUrl, "api" ]]
